--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
   "version": "2021.04.06",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --port 8080 --disableHostCheck",
+    "start": "node server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --aot -prod"
   },
   "engines": {
-    "node": "14.x"
+    "node": "14.15.4",
+    "npm": "6.14.10"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.0.0",
+    "@angular/cli": "^11.2.7",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
+    "@angular/compiler-cli": "^7.0.4",
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
@@ -26,8 +30,10 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "d3": "^5.7.0",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.0",
+    "path": "^0.12.7",
     "popper.js": "^1.14.4",
     "rxjs": "^6.1.0",
     "underscore": "^1.9.1",
@@ -35,8 +41,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.0",
-    "@angular/cli": "~7.0.1",
-    "@angular/compiler-cli": "~7.0.0",
+    "@angular/cli": "^11.2.7",
+    "@angular/compiler-cli": "^7.0.4",
     "@angular/language-service": "~7.0.0",
     "@types/bootstrap": "^4.1.2",
     "@types/d3": "^5.0.1",
@@ -44,6 +50,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
