--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ngo-blockchain": {
+    "freshtrace": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ngo-blockchain",
+            "outputPath": "dist/freshtrace",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngo-blockchain:build"
+            "browserTarget": "freshtrace:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngo-blockchain:build:production"
+              "browserTarget": "freshtrace:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngo-blockchain:build"
+            "browserTarget": "freshtrace:build"
           }
         },
         "test": {
@@ -111,7 +111,7 @@
         }
       }
     },
-    "ngo-blockchain-e2e": {
+    "freshtrace-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -120,11 +120,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngo-blockchain:serve"
+            "devServerTarget": "freshtrace:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ngo-blockchain:serve:production"
+              "devServerTarget": "freshtrace:serve:production"
             }
           }
         },
@@ -140,5 +140,5 @@
       }
     }
   },
-  "defaultProject": "ngo-blockchain"
+  "defaultProject": "freshtrace"
 }
