--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.13.4",
     "@angular/animations": "~7.0.0",
-    "@angular/cli": "^11.2.7",
+    "@angular/cli": "^7.0.7",
     "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
+    "@angular/compiler": "^7.0.4",
     "@angular/compiler-cli": "^7.0.4",
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
@@ -27,30 +28,29 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
-    "bootstrap": "^4.1.3",
-    "core-js": "^2.5.4",
-    "d3": "^5.7.0",
+    "bootstrap": "^4.6.0",
+    "core-js": "^2.6.12",
+    "d3": "^5.16.0",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.5.0",
+    "jquery": "^3.6.0",
+    "node-sass": "^4.14.1",
     "path": "^0.12.7",
     "popper.js": "^1.14.4",
-    "rxjs": "^6.1.0",
-    "underscore": "^1.9.1",
+    "rxjs": "^6.6.7",
+    "typescript": "^3.1.1",
+    "underscore": "^1.12.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.0",
-    "@angular/cli": "^11.2.7",
-    "@angular/compiler-cli": "^7.0.4",
     "@angular/language-service": "~7.0.0",
-    "@types/bootstrap": "^4.1.2",
-    "@types/d3": "^5.0.1",
-    "@types/jasmine": "~2.8.8",
+    "@types/bootstrap": "^4.6.0",
+    "@types/d3": "^5.16.4",
+    "@types/jasmine": "^2.8.17",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
-    "enhanced-resolve": "^3.3.0",
+    "enhanced-resolve": "^3.4.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -58,12 +58,11 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.4",
     "serialize-javascript": "^3.1.0",
     "tree-kill": "~1.2.2",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "tslint": "~5.11.0"
   },
   "resolutions": {
     "tree-kill": "^1.2.2",
