--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
     "core-js": "^2.6.12",
+    "cors": "^2.8.5",
     "d3": "^5.16.0",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
